--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
+body {
+  background-color: rgb(103, 204, 218);
+  text-align: center;
+}
+
+header {
+  display: flex;
+  background-color: #10f3e8;
+  justify-content: space-between;
+  padding: 0 60px;
+  align-items: center;
+  height: 10vh;
+}
+
+input {
+  border: none;
+  background-color: rgb(234, 236, 74);
+  border-bottom: 2px solid rgb(0, 0, 0);
+  padding: 10px 20px 10px 5px;
+  margin-bottom: 20px;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+}
+
+.title {
+  color: rgb(70, 21, 245);
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.tanggal {
+  color: rgb(2, 2, 2);
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.Button {
+  background-color: #01ffdd;
+  color: rgb(40, 44, 52);
+  font-size: 10px;
+  padding: 4px;
+  font-weight: bold;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+  min-width: 60px;
+}
+
 .App {
   text-align: center;
 }
